# mojodojocasahouse

./: .editorconfig  .gitignore  .gitmodules  README.md
blink/: platformio.ini
blink/src/: main.cpp
dht11/: platformio.ini
dht11/src/: main.cpp
iotserver/: Makefile  platformio.ini
iotserver/boot/firmware/: config.txt
iotserver/lib/app_hal/: app_hal.c
iotserver/lib/lv_demos/: lv_demos.h
iotserver/lib/lv_demos/benchmark/: lv_demo_benchmark.c
iotserver/lib/lv_demos/benchmark/assets/: img_benchmark_cogwheel_alpha256.c  img_benchmark_cogwheel_argb.c  img_benchmark_cogwheel_indexed16.c  img_benchmark_cogwheel_rgb.c  lv_font_benchmark_montserrat_12_compr_az.c.c  lv_font_benchmark_montserrat_16_compr_az.c.c  lv_font_benchmark_montserrat_28_compr_az.c.c
iotserver/lib/lv_demos/flex_layout/: lv_demo_flex_layout_main.h
iotserver/lib/lv_demos/multilang/: lv_demo_multilang.c
iotserver/lib/lv_demos/multilang/assets/fonts/: font_multilang_large.c  font_multilang_small.c
iotserver/lib/lv_demos/music/: lv_demo_music.c
iotserver/lib/lv_demos/render/: lv_demo_render.c
iotserver/lib/lv_demos/render/assets/: img_render_arc_bg.c
iotserver/lib/lv_demos/widgets/assets/: img_clothes.c  img_lvgl_logo.c
iotserver/lib/lv_examples/: lv_examples.h
iotserver/lib/lv_examples/assets/: animimg001.c  animimg002.c  animimg003.c  img_caret_down.c  img_cogwheel_argb.c  img_cogwheel_indexed16.c  img_cogwheel_rgb.c  img_hand.c  img_skew_strip.c  img_star.c  imgbtn_left.c  imgbtn_mid.c  imgbtn_right.c
iotserver/lib/lv_examples/assets/emoji/: img_emoji_F617.c
iotserver/lib/lv_examples/libs/gif/: img_bulb_gif.c
iotserver/lib/lv_examples/libs/lodepng/: img_wink_png.c
iotserver/lib/lv_examples/libs/rlottie/: lv_example_rlottie_approve.c
iotserver/lib/lv_examples/porting/: lv_port_fs_template.c
iotserver/src/: IMG_8282_cropped.c  IMG_8282_cropped.jpg.c  IMG_8282_small.c  dht11.cpp  lv_conf.h  lvgl_clock.cpp  lvgl_clock.h  main.cpp
iotserver/support/: sdl2_build_extra.py  sdl2_paths.py
sensors/: CMakeLists.txt  irremote.py  ldr.py  main.py  requirements.txt  server.py  switch.py  thermometer.py
sensors/etc/systemd/system/: sensors.service
sensors/scripts/: init-venv.sh  install.sh  prepare.sh  uninstall.sh
smartwatch/: .gitignore  CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c  platformio.ini  smartwatch.guiguider
smartwatch/boot/firmware/: config.txt
smartwatch/etc/systemd/system/: iotserver.service  smartwatch.service  smartwatch.timer
smartwatch/ports/fbdev/: hal.c
smartwatch/ports/include/: hal.h
smartwatch/ports/sdl/: CMakeLists.txt  hal.c
smartwatch/scripts/: build.sh  install.sh  uninstall.sh
smartwatch/src/: .gitignore  smartwatch.guiguider
smartwatch/src/custom/: custom.c  server.c  server.h
