cmake_minimum_required(VERSION 3.20.0)

project(sensors LANGUAGES C)

install(FILES ${CMAKE_BINARY_DIR}/bin/sensors
  DESTINATION /bin
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
)

install(FILES ${CMAKE_BINARY_DIR}/etc/systemd/system/sensors.service
  DESTINATION /etc/systemd/system
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
